Home view location change

--- a/Visit It App/index.html
+++ b/Visit It App/index.html
@@ -20,7 +20,7 @@
     
     <div data-role="drawer" id="drawer-menu" data-id="drawer-menu" style="width: 270px">
         <ul data-role="listview">
-            <li><a href="views/home-view.html">Home</a></li>
+            <li><a href="#home-view">Home</a></li>
             <li><a href="views/map-view.html">Map</a></li>
             <li><a href="views/reminder-mode-view.html">Reminder</a></li>
             <li><a href="views/challenger-mode-view.html">Challenger</a></li>
