--- a/Visit It App/index.html
+++ b/Visit It App/index.html
@@ -36,7 +36,7 @@
         </header>
     </div>
     
-    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBH5atMlSMfhEVRS_8F9t0i5mbBbC3zWWE"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBH5atMlSMfhEVRS_8F9t0i5mbBbC3zWWE&v=3.4"></script>
     <script src="scripts/app/googleMaps.js"></script>
     <script src="scripts/app/location.js"></script>
     <script src="scripts/app/app.js"></script>
