Added functionality for adding reminders + new design for pop up

--- a/Visit It App/index.html
+++ b/Visit It App/index.html
@@ -39,8 +39,10 @@
     </div>
     
     <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBH5atMlSMfhEVRS_8F9t0i5mbBbC3zWWE&v=3.4"></script>
+	<script src="scripts/app/location.js"></script>
+	<script src="scripts/app/reminder.js"></script>
+	<script src="scripts/app/add-reminder.js"></script>
     <script src="scripts/app/google-maps.js"></script>
-    <script src="scripts/app/location.js"></script>
     <script src="scripts/app/app.js"></script>
 </body>
 </html>
