Settings removed, random photo option added

--- a/Visit It App/index.html
+++ b/Visit It App/index.html
@@ -15,7 +15,7 @@
             <li><a href="views/reminder-mode-view.html">Reminder</a></li>
             <li><a href="views/challenger-mode-view.html">Challenger</a></li>
             <li><a href="views/spy-mode-view.html">Spy</a></li>
-            <li><a href="views/settings-view.html">Settings</a></li>   
+            <li><a href="views/random-photo-view.html">Take random photo</a></li>   
         </ul>
     </div>
     
@@ -51,13 +51,14 @@
 	<script src="bower_components/everlive/min/rsvp.min.js"></script>
 	<script src="bower_components/everlive/min/underscore.min.js"></script>
     <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBH5atMlSMfhEVRS_8F9t0i5mbBbC3zWWE&v=3.4"></script>
-	<script src="scripts/app/reminder-control.js"></script>
 	<script src="scripts/app/add-reminder.js"></script>
     <script src="scripts/app/google-maps.js"></script>
     <script src="scripts/app/home-mode.js"></script>
     <script src="scripts/app/challenge-mode.js"></script>
     <script src="scripts/app/reminder-mode.js"></script>
     <script src="scripts/app/spy-mode.js"></script>
+	<script src="scripts/app/reminder-control.js"></script>
+	<script src="scripts/app/photo-control.js"></script>
     <script src="scripts/app/app.js"></script>
 	<script src="bower_components/jquery-mobile/jquery.mobile.custom.min.js"></script>
 </body>
