Added position watch and button for showing current position

--- a/Visit It App/index.html
+++ b/Visit It App/index.html
@@ -24,6 +24,8 @@
             <nav data-role="navbar">
                 <a data-role="button" data-rel="drawer" href="#drawer-menu" 
 				   data-icon="drawer-button" data-align="left"></a>
+				<a data-role="button" data-click="app.googleMaps.showCurrentLocation" 
+				   data-icon="globe" data-align="right"></a>
                 <span data-role="view-title"></span>
             </nav>
         </header>
