Fixed bug with listview creating multiple times + styles added

--- a/Visit It App/index.html
+++ b/Visit It App/index.html
@@ -7,7 +7,7 @@
     <link href="styles/main.css" rel="stylesheet" />
 </head>
 <body> 
-    <div data-role="drawer" id="drawer-menu" data-id="drawer-menu" 
+    <div data-role="drawer" class="drawer" id="drawer-menu" data-id="drawer-menu" 
 		 data-click="click" data-swipe-to-open="false">
         <ul data-role="listview">
             <li><a href="#home-view">Home</a></li>
