--- a/Visit It App/index.html
+++ b/Visit It App/index.html
@@ -10,12 +10,12 @@
     <div data-role="drawer" class="drawer" id="drawer-menu" data-id="drawer-menu" 
 		 data-click="click" data-swipe-to-open="false">
         <ul data-role="listview">
-            <li><a href="#home-view">Home</a></li>
-            <li><a href="views/map-view.html">Map</a></li>
-            <li><a href="views/reminder-mode-view.html">Reminder</a></li>
-            <li><a href="views/challenger-mode-view.html">Challenger</a></li>
-            <li><a href="views/spy-mode-view.html">Spy</a></li>
-            <li><a href="views/random-photo-view.html">Take random photo</a></li>   
+            <li><a href="#home-view" data-icon="home">Home</a></li>
+            <li><a href="views/map-view.html" data-icon="globe">Map</a></li>
+            <li><a href="views/reminder-mode-view.html" data-icon="organize">Reminder</a></li>
+            <li><a href="views/challenger-mode-view.html" data-icon="favorites">Challenger</a></li>
+            <li><a href="views/spy-mode-view.html" data-icon="contacts">Spy</a></li>
+            <li><a href="views/random-photo-view.html" data-icon="camera">Take random photo</a></li>   
         </ul>
     </div>
     
